--- a/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -5,6 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
         <ui:include src="/WEB-INF/templates/head.xhtml" />
+        <title>Hotel Lucena</title>
     </h:head>
     <h:body>
         <ui:include src="/WEB-INF/templates/header.xhtml" />
